src/test/ui/issues/issue-27282-move-ref-mut-into-guard.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-27282-move-ref-mut-into-guard.rs:14:18
   |
LL |             if { (|| { let bar = foo; bar.take() })(); false } => {},
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
